metadata/force-app/main/default/objects/CustomName_KWHXk__c/CustomName_KWHXk__c.object-meta.xml
<CustomObject>
    <description>Description_Kaiqe</description>
    <label>CustomLabel_UHiBm</label>
    <nameField>
        <label>CustomLabel_UHiBm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_UHiBms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>