metadata/force-app/main/default/objects/CustomName_KWHXk__c/fields/CustomField_KjGvZ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KjGvZ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldfwqCH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>